# lowpass-filter

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  check-build.sh  flake.nix  shell.nix
.github/workflow/: rust.yml
.github/workflows/: dependabot-auto-merge.yml  qa.yml  rust.yml
examples/: live-data-with-gui.rs  lpf-example-minimal.rs  lpf-example.rs  mp3-lpf-store-as-wav.rs  read-wav--do-lpf--store.rs
src/: lib.rs  num_traits.rs  test_util.rs
src/simple/: dp.rs  mod.rs  sp.rs
