[package]
name = "lowpass-filter"
description = """
This is a `no_std` Rust library for simple digital low pass filters. You can use it for example to
get the low frequencies from a song.
"""
version = "0.3.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2021"
keywords = ["audio", "filter", "digital", "lowpass", "dsp"]
categories = ["multimedia", "no-std"]
readme = "README.md"
license = "MIT"

homepage = "https://github.com/phip1611/lowpass-filter"
repository = "https://github.com/phip1611/lowpass-filter"
documentation = "https://docs.rs/lowpass-filter/"

[dependencies]

[dev-dependencies]
audio-visualizer = "0.3" # to visualize the output
minimp3 = "0.5" # to test this filter
wav = "1.0" # store was wav
# use rustfft because I use a window length >4096
spectrum-analyzer = { version = "1.1", default-features = false, features = ["rustfft-complex"] }

# debug bins will be faster
[profile.dev]
opt-level = 1
