[package]
name = "lowpass-filter"
description = """
Simple first-order digital lowpass filters, compatible with `no_std`. You can
use it, for example, to get the low frequencies from a song.
"""
version = "0.4.1"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2024"
keywords = ["audio", "filter", "digital", "lowpass", "dsp"]
categories = ["multimedia", "no-std", "no-std::no-alloc"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/lowpass-filter"
repository = "https://github.com/phip1611/lowpass-filter"
documentation = "https://docs.rs/lowpass-filter/"
rust-version = "1.85"
exclude = [
  ".github",
  "test",
  "res"
]

[dependencies]

[dev-dependencies]
audio-visualizer = "0.5" # to visualize the output
hound = "3.5.1"
itertools = "0.14.0"
spectrum-analyzer = { version = "1.7", default-features = false, features = [] }


# tests, bins, and examples will run faster
[profile.dev]
opt-level = 1
